# grappa

./: .gitignore  README.md  dev-requirements.txt  grappa.py  pyproject.toml
src/grappa/: grappa.py
test/: benchmark.py  benchmark_ggrappa.py  ggrappa_benchmark.py  kernel_coil_accel_benchmark.py  kernel_coil_accel_benchmark_ggrappa.py  lamda_benchmark.py  test_dataloader.py  test_ggrappa.py  test_grappa.py  test_mask.py
test/ggrappa/: application.py  estimation.py  grappaND.py
test/utils/: calib.py  coil_combine.py  evaluate.py  mri_data.py  pygrappa.py  subsample.py  transforms.py
test/visualization/: lamda_visualization.py  sample_visualization.py  time_visualization.py
